# Silvertalk

./: .env.example  .env.production.example  .env.runpod.commands  .gitattributes  .gitignore  GIT_READY.md  README.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile.api  Dockerfile.runpod  Dockerfile.worker  pyproject.api.toml  pyproject.toml  requirements.ec2.txt  requirements.txt  test_celery_task.py  test_connection.py  test_sender.py
backend/app/: __init__.py  celery_config.py  main.py  schemas.py
backend/app/routers/: __init__.py  auth.py  calendar.py  chat.py  gallery.py  generate.py  home.py  memory.py  users.py  video.py
backend/app/utils/: audio.py
backend/common/: __init__.py  auth.py  config.py  database.py  ffmpeg_client.py  image_utils.py  models.py  replicate_client.py  s3.py  s3_client.py
backend/worker/: __init__.py  celery_app.py  check_runpod_environment.sh  ffmpeg_client.py  load_env.sh  s3_utils.py  setup_runpod_complete.sh  tasks.py  voice_presets.py  worker_tasks_example.py
docs/: API_SPEC.md  BACKEND_CODE_REVIEW.md  CELERY_DEPLOYMENT_REPORT.md  DB_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  DOCKER_SETUP.md  DOCKER_TEST_GUIDE.md  EC2_SETUP_FINAL.md  FASTAPI_DEPLOYMENT.md  GALLERY_SYNC_GUIDE.md  GIT_GUIDE.md  IMPLEMENTATION_PLAN.md  MAC_SETUP.md  MERGE_STRATEGY.md  PYAV_RESOLUTION_TIMELINE.md  RUNPOD_COMPLETE_SETUP.md  RUNPOD_DEPLOY.md  RUNPOD_QUICK_START.md  RUNPOD_SETUP.md  RUNPOD_TERMINAL_TROUBLESHOOT.md  SETUP.md  TEAMMATE_GUIDE.md  UNIFIED_SCHEMA.md
mobile-app/: .gitignore  App.js  README.md  app.json  metro.config.js  package-lock.json  package.json  temp_login.js
mobile-app/android/: settings.gradle
mobile-app/android/app/: build.gradle
mobile-app/android/app/src/main/: AndroidManifest.xml
mobile-app/assets/: dog.riv
mobile-app/ios/: Podfile
mobile-app/ios/SilverTalk/: Info.plist  dog2.riv
mobile-app/ios/SilverTalk.xcodeproj/: project.pbxproj
mobile-app/ios/SilverTalk.xcworkspace/: contents.xcworkspacedata
mobile-app/src/: theme.js
mobile-app/src/api/: auth.js  config.js
mobile-app/src/components/: DogAnimation.js
mobile-app/src/hooks/: useChatSession.js  usePolling.js  useVoiceRecording.js
mobile-app/src/screens/: ChatHistoryDetailScreen.js  ChatHistoryScreen.js  ChatScreen.js  GalleryScreen.js  HomeScreen.js  LoginScreen.js  ProfileScreen.js  VideoGalleryScreen.js
mobile-app/src/utils/: gallerySync.js  speech.js
(+4 files in other folders)
